Write section on address collision
This commit brings in a small paragraph that discusses the use of
SHA3-256 as the hashing algorithm that Maidsafe uses.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,28 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-03-22 17:22:47 +0000 
+%% Created for David Andrew Brown at 2018-03-24 11:55:39 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@webpage{hash-reccomend,
+	Date-Added = {2018-03-24 11:55:09 +0000},
+	Date-Modified = {2018-03-24 11:55:38 +0000},
+	Lastchecked = {2018-03-24},
+	Month = {2018},
+	Url = {https://www.keylength.com/en/4/}}
+
 @webpage{tiananmen-square,
-	Author = {Jonathan Kaiman },
+	Author = {Jonathan Kaiman},
 	Date-Added = {2018-03-22 17:20:50 +0000},
 	Date-Modified = {2018-03-22 17:22:46 +0000},
 	Month = {2013},
 	Title = {Tiananmen Square online searches censored by Chinese authorities},
 	Url = {https://www.theguardian.com/world/2013/jun/04/tiananmen-square-online-search-censored},
 	Urldate = {2018-03-18},
-	Year = {6}}
+	Year = {6},
+	Bdsk-Url-1 = {https://www.theguardian.com/world/2013/jun/04/tiananmen-square-online-search-censored}}
 
 @webpage{delete-data-rfc,
 	Date-Added = {2018-03-22 17:00:36 +0000},
 	Date-Modified = {2018-03-22 17:02:59 +0000},
 	Lastchecked = {2018-03-22},
-	Url = {https://github.com/ustulation/rfcs/blob/deletable-immutable-data/text/0000-deletable-immutable-data/0000-deletable-immutable-data.md}}
+	Url = {https://github.com/ustulation/rfcs/blob/deletable-immutable-data/text/0000-deletable-immutable-data/0000-deletable-immutable-data.md},
+	Bdsk-Url-1 = {https://github.com/ustulation/rfcs/blob/deletable-immutable-data/text/0000-deletable-immutable-data/0000-deletable-immutable-data.md}}
 
 @webpage{privacy,
 	Date-Added = {2018-03-22 11:37:08 +0000},
@@ -279,3 +288,28 @@
 	Author = {Irvine, David},
 	Title = {Self Encrypting Data},
 	Year = {2010}}
+
+@techreport{dworkin2015sha,
+	Author = {Dworkin, Morris J},
+	Title = {SHA-3 standard: Permutation-based hash and extendable-output functions},
+	Year = {2015}}
+
+@inproceedings{amy2016estimating,
+	Author = {Amy, Matthew and Di Matteo, Olivia and Gheorghiu, Vlad and Mosca, Michele and Parent, Alex and Schanck, John},
+	Booktitle = {International Conference on Selected Areas in Cryptography},
+	Organization = {Springer},
+	Pages = {317--337},
+	Title = {Estimating the cost of generic quantum pre-image attacks on SHA-2 and SHA-3},
+	Year = {2016}}
+	
+@article{schaller1997moore,
+  title={Moore's law: past, present and future},
+  author={Schaller, Robert R},
+  journal={IEEE spectrum},
+  volume={34},
+  number={6},
+  pages={52--59},
+  year={1997},
+  publisher={IEEE}
+}
+
