Work on the evaluation and on the conclusion
This commit brings included a proper read-through and an expansion to
the evaluation of the dissertation. It also includes a conclusion. This
commit then represents the first full draft of the dissertation, more
work needs to be done however to ensure that it is of the highest
quality.

--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -2,47 +2,55 @@
 
 \section{Ownership of Data}
 
-As discussed in Section \ref{sec:ownership-of-data}, Ownership of Data is an important aspect of the SAFE Network. Access to the \textit{Data Map} of data is what grants access to what is being stored on the network, revoke access or ``forget'' the credentials to the \textit{Data Map} and that data is irrecoverable. Users `own' the access to their data and nobody else does. This is what is so special about the architecture of the SAFE Network and what gives it unique opportunities for software development. Ownership of Data specifically means that you can give people access to data whilst retaining the sole right to its mutation. Think of a public blog for example. The creator, the account used to create the blog, `owns' the ability to edit the blog. They can mutate data as they please as they have access to the keys necessary. Other people can access the data if and only if the `owner' of the blog says they can. Thus being able to host websites on the SAFE Network like this is extremely powerful.
+As discussed in Section \ref{sec:ownership-of-data}, Ownership of Data is an important aspect of the SAFE Network. Access to the \textit{Data Map} of data is what grants access to what is being stored on the network, revoke access or ``forget'' the credentials to the \textit{Data Map} and that data is irrecoverable. Users ``own'' the access to their data and nobody else does. This is what is so special about the architecture of the SAFE Network and what gives it unique opportunities for software development. Ownership of Data specifically means that you can give people access to data whilst retaining the sole right to its mutation. Think of a public blog for example. The creator, the account used to create the blog, ``owns'' the ability to edit the blog. They can the data as they please before their account stores the keys to the relevant \textit{Data Maps}. Other people can access the data if and only if the ``owner'' of the blog says they can. 
 
-\section{Opportunistic Caching}
-
- An important feature of \textit{vaults} that hasn't been discussed yet is that of \textit{caching}. In short, if \textit{vaults} keep passing the same chunk of data onto other \textit{vaults} (as a client somewhere retrieves it) they start to cache the chunks. This means in a loose sense that as more and more people start to access data, say a news website, that access gets faster and faster. Through the architecture of the SAFE Network such websites cannot 'go down' due to high traffic, the network simply responds by allowing more \textit{vaults} to cache and serve the data. This property is important to small websites. If a smaller news site suddenly gets high amounts of traffic, for instance a viral article, they might suffer from outages due to high traffic on a central server in the traditional model of the internet. Hosted on the SAFE Network however, the network will respond (autonomously) to the higher volume of traffic and dynamically increase its potential to serve that content.
- 
- Another benefit of this caching is geographical proximity. A good example is that of a website that has support for multiple languages. Due to \textit{vaults} caching data, the chunks that correspond to particular languages will be cached in the \textit{vaults} nearest where they are being served. For instance, the chunks that correspond to Japanese content would more likely to be cached near \textit{vaults} in and around Japan as that is where they are being read from the most. Unlike traditional models of client-server, \textit{vaults} caching data means that as more clients access content it gets faster and faster to retrieve that data.
- 
- This caching applies to all data, including ZIM files. This means that when something like Wikipedia is uploaded to the network, the more people that access it the faster it gets for everyone. For a popular resource like Wikipedia this can be really important in some areas of the world. For places that have slow internet connections, \textit{vaults} that are close by can help to ensure data can be retrieved by clients as quickly as possible. 
- 
  \section{Cost Benefit}
  
- A huge benefit to anyone wanting to build a website or application is how much it costs to store data on the SAFE Network. Traditionally on the internet, you would need to pay for a server and also a domain name to be used. Depending on how much traffic the website gets you would need a more powerful server which costs more money. This is not the case on the SAFE Network. The only cost is in writing data to the network, thats it. Meaning if you wanted to publish a website you would use \textit{Safecoin} to pay for the storage needed, after that however your website is available forever. You don't need to pay anymore money except when you want to update or add new content.
+ A huge benefit to anyone wanting to build a website or application is how much it costs to store data on the SAFE Network. Traditionally on the internet, you would need to pay for a server and also a domain name to be used. Depending on how much traffic the website gets you would need a more powerful server which costs more money. This is not the case on the SAFE Network, the only cost is in writing data. A user could publish a website or blog and it doesn't cost them a penny to keep it on the network, it will be available indefinitely.
  
- For SAFE Wiki, this means that once a user pays to upload something like Wikipedia (``only'' ~75GB in size) it is then available to everyone for free and forever. It doesn't cost anymore money than it cost to store the file originally. This means that it is possible for not only organisations like Wikimedia to upload files, but also good samaritans using the network. As the ZIM file is stored on the network as immutable data it cannot be deleted or altered. Meaning once uploaded that file is available for consumption by all and forever.
+ For SAFE Wiki, this means that once a user pays to upload something like Wikipedia (``only'' ~75GB in size) it is then available to everyone for free and forever. It doesn't cost anymore money than it cost to store the file originally. This means that it is possible to publish a resource like Wikipedia and incur no running costs. As the ZIM file is stored on the network as immutable data it cannot be deleted or altered. Meaning once uploaded that file is available for consumption by all and forever.
+ 
+ \section{Alternative Business Models}
+
+Like any new technology, the SAFE Network opens up many opportunities that didn't exist before. In SAFE Network nomenclature, \textit{vaults} farm data. The safe and reliable storage (farming) of data is rewarded with \textit{Safecoin}. One could envision an application that instead of chargin users for access, allows them to become a \textit{vault} that generates \textit{Safecoin}. This \textit{Safecoin} could then be sent back to the creators of the program and hence financially compensates them for the usage of their application. One consideration of this approach however is that vaults don't get to choose what data they store, that is an integral part of the architecture of the SAFE Network. By following this financial model then it would be for the ``good of the whole'', increasing the utility of the entire network and not just for one application.
+
+This model could be used to better make use of a consumers resources. When a user sits and watches Netflix on an entertainment system, there is very little strain on the resources of the device. In the case of a games console, literally teraflops of processing power, advanced networking and storage facilities are going unused. Potential financial models can try to \textit{exploit} this untapped power to the benefit of both the user and the provider of the application. Encouraging the creation of more \textit{vaults} not only increases the utility of the SAFE Network but provides users with an entirely new way to pay for content. Offering the resources they have in exchange for access to services.
 
 \section{Privacy and Anonymity}
 
-Anonymity and Privacy are not mutually exclusive. Anonymity means \textit{``Nameless; of unknown name; also, of unknown or unavowed authorship''}\cite{anonymous}. True anonymity is very important for many people around the world, a good example being whistleblowers and the work of journalists in adversarial conditions. The identities of individuals is what matters here. Being able to convey a message and be ``nameless''. 
+Anonymity and Privacy are not mutually exclusive. Anonymity means \textit{``Nameless; of unknown name; also, of unknown or unavowed authorship''}\cite{anonymous}. True anonymity is very important for many people around the world, especially when it comes to digital communications. The identities of individuals is what matters here. Being able to convey a message and be ``nameless''. 
 
-Privacy means \textit{``The state of being in retirement from the company or observation of others; seclusion''}\cite{privacy}. Privacy is important aspect of our lives that some hold to a higher virtue than others. Most would agree however that you should be able to send a message/letter/email to someone and have the contents of that message be private.
+Privacy means \textit{``The state of being in retirement from the company or observation of others; seclusion''}\cite{privacy}. Privacy is an important aspect of our lives that some hold to a higher virtue than others. Most would agree however that you should be able to send a message/letter/email to someone and have the contents of that message be private.
 
-To relate the two concepts together in terms of the SAFE Network, I would say that anonymity relates to meta-data and privacy relates to data itself. A real world example of meta-data is something like an address. When you send a letter to someone, the postal service can see the address on the envelope. The letter is not anonymous because the recipient is not ``nameless''. The contents of the envelope, the data, is however private. It is \textit{``in retirement from the company or observation of others''}. The SAFE Network provides guarantees of privacy. Data on that is stored on the SAFE Network has gone through \textit{self encryption} meaning it is nearly impossible for anyone to deduce what that data is. I could upload pictures and documents with the assurance that only I can access them, it is private data. What the SAFE Network does not provide is anonymity in all network activity and that is down to meta-data. When a client requests a chunk of data from a vault, that vault knows the \textit{account} that is requesting the data. However difficult it may be to tie an \textit{account} to an individual, that information exists for a period of time and hence the request is no longer anonymous.
+To relate the two concepts together in terms of the SAFE Network, I would say that anonymity relates to meta-data and privacy relates to data itself. A real world example of meta-data is something like an address. When you send a letter to someone, the postal service can see the address on the envelope. The letter is not anonymous because the recipient is not ``nameless''. The contents of the envelope, the data, is however private. It is \textit{``in retirement from the company or observation of others''}. The SAFE Network provides guarantees of privacy. Data that is stored on the SAFE Network has gone through \textit{self encryption} meaning it is nearly impossible for anyone to deduce what that data is. I could upload pictures and documents with the assurance that only I can access them, it is private data. What the SAFE Network does not provide is anonymity in all network activity and that is down to meta-data. When a client requests a chunk of data from a vault, that vault knows something relating to the \textit{account} that is requesting the data. However difficult it may be to tie that information to an individual, that information exists for a period of time and hence anonymity is not insured.
 
-This has big implications for the use case of the network but the nuances of how this impacts things is quite subtle. Data that is stored on the network is ``garbage data'', \textit{vaults} have no idea what the data they are storing means. \textit{Data Maps} are what gives meaning and relationship to chunks of data. At the storage level, chunks have absolutely no discernible relationship to each other apart form their proximity in 256-Bit address space. The access to \textit{Data Maps} is what gives users privacy. If you are the only person who knows where it is and how to decrypt it then the data it leads to is truly private. Once data is stored on the network, it could be said to be anonymous. Nothing publicly available exists to tie it to an individual. When the data is interacted with, true and complete anonymity is broken. \textit{Vaults} know exactly what account is requesting chunks of data. It is thus for the above reasons I propose that the SAFE Network allows pseudo-anonymised interactions. In practically users can be relatively assured that their interaction is anonymous, they must however know that it is non ensured.
+This has big implications for the use case of the network but the nuances of how this impacts things is quite subtle. Data that is stored on the network is ``garbage data'', \textit{vaults} have no idea what the data they are storing means. \textit{Data Maps} are what gives meaning and relationship to chunks of data. At the storage level, chunks have absolutely no discernible relationship to each other. The access to \textit{Data Maps} is what gives users privacy. If you are the only person who knows where it is and how to decrypt it then the data it leads to is truly private. Once data is stored on the network, it could be said to be anonymous. Thus for the above reasons the SAFE Network allows pseudo-anonymised interactions. In practically users can be relatively assured that their interaction is anonymous, they must however know that it is non ensured.
 
-Privacy and anonymity is very important for SAFE Wiki. In some parts of the world people do not have the freedom to access any information they want. A modern day example of this is the censorship is that the Chinese government are still censoring access to information about Tiananmen Square\cite{tiananmen-square}. Thus the privacy and pseudonymization of activity is very important. The SAFE Network facilitates the uncensored access to information, which as discussed at the beginning of this report is crucial to developing societies.
+Privacy and anonymity is very important for SAFE Wiki. In some parts of the world people do not have the freedom to access any information they want. A modern day example of this is that the Chinese government are still censoring access to information about Tiananmen Square\cite{tiananmen-square}. Thus the privacy and pseudonymization of activity is very important. The SAFE Network facilitates the uncensored access to information, which as discussed at the beginning of this report is crucial to developing societies.
 
 \section{Immutability of Data}
 
 As mentioned in Section \ref{subsec:immutability-of-data}, data on the SAFE Network is immutable. Once a chunk is written to the network that chunk of data can never be removed. It is the access to data through \textit{Data Maps} and encryption keys that orchestrates the usage of it. What this means in practical situations is that once someone has access to data, they have access to it forever. There is no way to revoke that right. For SAFE Wiki, this is brilliant. Once a ZIM file is uploaded then a user can access that information forever.
 
-What is troubling however is sometimes a user may indeed wish to delete data permanently. To truly have it be gone forever and not stored by the network. This may be on a personal level or asking a company to delete their personal records. Although not implemented yet, there is talk and an RFC\cite{delete-data-rfc} to bring deletable Immutable Data to the network. However to allow ``Immutable Data'' to be deleted is an interesting concept, I don't know if you could really call it ``Immutable'' if you can indeed delete it.
+What is troubling however is sometimes a user may indeed wish to delete data permanently. To truly have it be gone forever and not stored by the network. This may be on a personal level or asking a company to delete their personal records. Although not implemented yet, there is talk and an RFC\cite{delete-data-rfc} to bring deletable Immutable Data to the network. However to allow ``Immutable Data'' to be deleted is an interesting concept, One can't really call it it ``Immutable'' if you can indeed delete it.
 
-\section{SAFE Wiki}
+\section{What can and can't be built on the SAFE Network}
 
-What I set out to achieve with SAFE Wiki has been achieved. In its ``final'' state, users can upload ZIM files to the SAFE Network and browse them. I personally feel that the idea behind SAFE Wiki is an extremely viable use case of the SAFE Network. Hosting archives of websites when the user-base does not exist to support them makes sense.
+To truly understand the limitations of what can be build on the SAFE Network is difficult. Current architectural models and techniques cannot be readily applied to the SAFE Network so to measure it against them would be doing it an injustice. It is however possible to examine what the network is capable of and thus establish its limitations in terms of applications.
+
+The SAFE Network can do simple websites really well. If a user wants to create a blog or a website then the SAFE Network is a fabulous choice. The cost benefit of not having ``running costs'' is a big benefit to people. Some websites are not updated frequently and thus being stored on the SAFE Network would possibly save users years of running costs. It is when websites become more complex, that the SAFE Network becomes a very difficult product to suggest. A simple example is e-commerce. As there is no processing available on the SAFE Network you would have to run your website against a server to handle payment processing. With that, it almost breaks the point of using the SAFE Network to some degree. It is still useful but by relying on a server makes one wonder if there is much point in using the SAFE Network to host the website. Some shops may find it more profitable but for some there may be little benefit. This could be answered by offering the use of Cryptocurrency as an option to pay for goods, this approach wouldn't need a traditional server to handle payment processing. For wide-scale adoption however only accepting Cryptocurrency is not a sensible option.
+
+To run a complex website like Netflix is an interesting example to think about. In many regards the SAFE Network makes perfect sense. By distributing video across the SAFE Network Netflix (or other streaming services) could reduce operational costs greatly. Again, it would only cost them money when they add content. There are no hosting costs associated. The big problem with this approach however is how do you ensure that users cannot download the files themselves, DRM in a system like the SAFE Network could be difficult to implement.
+
+The storage of data is where the SAFE Network excels. Data on the SAFE Network is immutable. So storing things like backups and archives makes perfect sense, once stored it cannot be removed. Thus the SAFE Network is a very attractive option when it comes to the long term and secure storage of data, this applies to organisations and to individual users. The general populous could make very good use of services like DropBox on the SAFE Network. The attractive thing about this is that they can know their data is safe, only they have access to it. The reduced cost is very appealing too, a user could backup large amounts of data and have access to it indefinitely without having to pay a yearly or monthly fee. Organisations could use the SAFE Network to perform backups of critical systems and for other purposes. Long term indefinite storage with a one time fee is a very attractive prospect.
+
+\subsection{Companies cannot own third party data}
+
+As discussed previously, data on the SAFE Network cannot be deleted. This means that under current laws and regulations, companies would find it extremely difficult to operate under their current methods. If for instance a user requested that their data was deleted, the company simply wouldn't be able to if it was stored on the SAFE Network. All they could do is the equivalent of throwing away the key to a filing cabinet. Amongst many other reasons, this is why companies cannot own ``third party'' data on the SAFE Network. How this is handled needs to be flipped to a model where users/companies own their own data. Instead of a user giving companies their data, they give the companies access to their data to facilitate the services they wish to access. This model means that services would need to be built around the idea that the source of the data is ultimately in control of that data. For services like Netflix, this would mean that the content produces would simply grant access to their videos and Netflix would then simply exist as an intermediary between the consumer and the video. This model means the content producer owns their own content.
 
 \section{Future Work}
 
-Future work for SAFE Wiki could take one of two approaches. Development could continue on SAFE Wiki itself or another approach could be taken, using the lessons learned from developing SAFE Wiki.
+Future work for SAFE Wiki could take one of two approaches. Development could continue on SAFE Wiki itself or another approach could be taken, using the lessons learned from developing SAFE Wiki. An alternative approach to how SAFE Wiki could develop is outlined below.
 
 \subsection{ZIM Uploader}
 
@@ -53,7 +61,7 @@ Indeed it is highly likely that other developers will create applications to fac
 \subsection{Kiwix JS Extension}
 \label{subsec:kiwix-js-safe}
 
-Kiwix JS itself is a browser extension. This means that after installation you have the ability to read ZIM files from local storage, Without needing an internet connection. Kiwix JS simply uses the browser as its run-time environment. Forking away from this approach perhaps fragments things more than they need to be. I propose that instead of pulling Kiwix JS into a desktop application, that through the use of the \textit{Web API} the functionality of SAFE Wiki could be brought to the extension.  With this approach the user would have Kiwix JS installed inside their browser (SAFE Browser or Peruse) and be able to use Kiwix JS as normal. Within a SAFE Network environment however, Kiwix JS would then have the ability to read ZIM files from the network.
+Kiwix JS itself is a browser extension, using the browser as its run-time environment. Forking away from this approach perhaps fragments things more than they need to be. Instead of pulling Kiwix JS into a desktop application, through the use of the \textit{Web API} the functionality of SAFE Wiki could be brought to the extension. With this approach the user would have Kiwix JS installed inside their browser (SAFE Browser or Peruse) and be able to use Kiwix JS as normal. Within a SAFE Network environment, Kiwix JS would then have the ability to read ZIM files from the SAFE Network.
 
 Extending Kiwix JS functionality instead of forking it brings many benefits. The first and foremost is that there is the possibility of this added functionality being merged into the main branch of Kiwix JS. Meaning it would be a supported solution provided by Kiwix. This would not only increase the awareness of ``SAFE Wiki'' but means that improvements (bug fixes etc) can be made to one single repository instead of constantly pulling changes across the two streams. As it would only have the functionality to read ZIM files, the changes required are minimal when compared to all the changes that happened inside SAFE Wiki. This approach makes sense, SAFE Wiki simply facilitates another storage medium for Kiwix JS to use.
 
@@ -63,11 +71,5 @@ Through the \textit{Web API} it would be possible to build a website that would 
 
 \subsection{Suggestion}
 
-The big downside with choosing to build a website would be that users lose the ability to view ZIM files that they have stored locally. I can envision that in the future it would be possible for a user to download ZIM files from the SAFE Network. Thus maintaining the ability to browse the files locally is a key piece of functionality that shouldn't be lost. This means that I suggest the approach outlined in Section \ref{subsec:kiwix-js-safe} is the most suitable. It is purely Kiwix JS, a well established project, with the added ability to read files from the SAFE Network.
-
-
-
-
-
-
+The big downside with choosing to build a website would be that users lose the ability to view ZIM files that they have stored locally. One can envision that in the future it would be possible for a user to download ZIM files from the SAFE Network for offline consumption. Thus maintaining the ability to browse the files locally, without an internet connection, is a key piece of functionality that shouldn't be lost. Thus the preferred and suggested approach is the one outlined in Section \ref{subsec:kiwix-js-safe}. It is Kiwix JS, a well established project, with the added ability to read files from the SAFE Network.
 
