--- a/sections/03-the-architecture-of-the-safe-network.tex
+++ b/sections/03-the-architecture-of-the-safe-network.tex
@@ -47,7 +47,7 @@ The SAFE Network stores chunks based on their 256-Bit address. Although the prob
 
 Once data has been written to the network, it can never be changed. The chunks of data that are the result of \textit{self encryption} will be stored by the network indefinitely. This means that to ``delete'' data more accurately means to ``forget how to access it''. The implication of this is that once data is uploaded, access to the \textit{Data Map} is the only think that stands between being able to access the data and it being lost forever. This has big implications and benefits to some use cases, think archiving books or genealogical records.
 
-\subsection{Disjoint Sections}
+\section{Disjoint Sections}
 
 The unique address of every 1MiB chunk of data is used to determine what \textit{vaults} are responsible for storing it. Maidsafe's innovation was in the creation of what are called \textit{Disjoint Sections}. These \textit{sections} are groups of \textit{vaults} that are responsible for a certain range of the 256-Bit XOR Address Space. By default, the network requires a minimum number of \textit{vaults} to sustain the network. At the time of writing this is eight \textit{vaults}. These eight \textit{vaults} form a complete \textit{section} and are responsible for the storage of the entire 256-Bit address range. As more \textit{vaults} join the network, this \textit{section} will grow in size and then eventually split into two new \textit{sections}. There are numerous requirements that have to be met before a \textit{section split} is allowed.
 
@@ -63,18 +63,18 @@ The unique address of every 1MiB chunk of data is used to determine what \textit
 
 After a split, \textit{sections} are then responsible for half of the 256-Bit address range that they were before. As more and more complete \textit{groups} of ~8 \textit{vaults} join the network, it continues to split and each \textit{section} is therefore responsible for the curation of less and less data. An important thing to note is that the SAFE Network doesn't assign 256-Bit addresses based on proximity, in a given section two \textit{vaults} could be very close together in 256-Bit XOR space but be located on different continents. This property helps the integrity of the network by ensuring \textit{vaults} in a given section are not located close to each other. Otherwise the network could be open to simple attacks. For example, start 8 \textit{vaults} on a single computer to form a \textit{section} then suddenly switch them all off which could cause data loss. If a significant number of \textit{vaults} leave the network then \textit{sections} have the ability to join with other \textit{sections} to ensure the stability of data is maintained. In Figure \ref{fig:safe-sections} you can see four \textit{sections} comprised of four \textit{vaults} each, you can see the address range that each \textit{section} is responsible for. In the diagram four \textit{vaults} make a \textit{section} instead of the traditional eight, this is just to make the diagram easier to process.
 
-\subsection{Proof of Resource}
+\section{Proof of Resource}
 \label{subsec:proof-of-resource}
 
 The \textit{proof of resource} (PoR) test is used to valid the effectiveness of a \textit{vaults} ability to store and serve data and is the value proposition of \textit{Safecoin}. The PoR is used to validate \textit{vaults} joining the network but also during other network events. Such an event is proving to its \textit{section} that it is indeed storing the data it says it is.
 
-\subsection{Personas}
+\section{Personas}
 
 \textit{Vaults} can be characterised as having different ``Personas''. One such \textit{persona} is the \textit{Data Manager}. A \textit{Data Manager} is responsible for the storage of chunks within a a\\textit{section}. Their job is vital to the stability of the network. When data is stored on the network, it is actually replicated across multiple \textit{Data Managers}. At all times the network aims to keep a minimum number of copies of a chunk of data, if a chunk goes missing this chunk is replicated to another \textit{Data Manager} to ensure that data is stored redundantly. Hence within a given section, there will be several vaults storing identical chunks of data. Each having full knowledge of the chunks of data that the other \textit{Data Manager} hold. This scheme means that no \textit{vault} will ever hold the single copy of a chunk of data, meaning that data is stored redundantly across the network.
 
 Another important \textit{persona} is that of the \textit{Client Manager}. A \textit{Client Manager} is responsible for storing the account data for clients that fall within its address space. When you create an account on the SAFE Network the data is stored on the network just like any other piece of data. It has a given 256-Bit Address and contains information like: how much \textit{Safecoin} an account has, the number of chunks of data that has been uploaded, etc. As an account is a 256-Bit address it will fall within the domain of a particular section, the \textit{Client Managers} in that \textit{section} will then store the relevant data.
 
-\subsection{Accounts}
+\section{Accounts}
 
 Accounts on the SAFE Network are not inherently special in that they are stored along with other pieces of data on the network. There is no centralised body or organisation that is needed to grant access to the network. An account on the SAFE Network is derived from two parts, an \textit{Account Secret} and a \textit{Account Password}. The \textit{Account Secret} identifies where the account is stored then the \textit{Account Password} is used to encrypt and decrypt the information. From these two components a client can gain access to a piece of data that represents their account. This data structure leads to all the data needed for the account:
 
@@ -103,7 +103,7 @@ Encryption is a very important aspect of the SAFE Network. Whenever data is stor
 
 When a client connects to the network they do so through the use of a \textit{Proxy Node}. A \textit{Proxy Node} is a \textit{vault} that is used to liaise between a client and the network at large. The \textit{Proxy Node} is used to hide the clients IP address from the rest of the network. Beyond the proxy and deeper into the network all \textit{vaults} know is the XOR Address of the account being used and its Public Key. Hence by using a \textit{Proxy Node}, the real world identity of the client is well hidden from the rest of the network. This means that a given \textit{vault} cannot detect that the data it is sending is going to a certain geographical location. In Figure \ref{fig:proxy-connection} you can see the topology of how a client connects to the SAFE Network.
 
-\section{Safecoin and Farming}
+\section{Network Incentives, Safecoin and Farming}
 
 Safecoin\cite{lambert2015safecoin} is the cryptocurrency of the SAFE Network, it is earned by \textit{farmers} and spent by writing data to the network. The expectation is that as the cost of CPU/Storage falls with time, the value of the Safecoin will increase. Value in this context is how much data each coin facilitates the storage of.
 
@@ -111,9 +111,12 @@ When a user creates an account on the network, they are given a \textit{Safecoin
 
 \textit{Farming} is the action of \textit{vaults} to store, maintain and serve data to clients. When a client requests a chunk of data, the \textit{vault} that successfully returns that piece of data will be given the opportunity to earn \textit{Safecoin}. The probability of being awarded this attempt to earn \textit{Safecoin} is determined by the \textit{farming rate} of the network at that specific moment in time. The \textit{farming rate} is used to balance supply and demand of data on the network. The SAFE Network tries at all times to keep a minimum amount of network capacity free, this is around \%30. When free space starts to fall below this threshold then the \textit{farming rate} will increase, meaning \textit{vaults} have the opportunity to earn more \textit{safecoin}. This works in the opposite direction too. If the network capacity grows so that there is an overabundance of free space then the \textit{farming rate} will decrease meaning \textit{vaults} earn less money. This constantly varying \textit{farming rate} is hence used to balance network resources and de-incentivise users adding \textit{vaults} with very high capacity to the network (if it is not needed). It encourages more \textit{farmers} when the network is running low on capacity (compared to demand) and discourages them when resources are overabundant.
 
-The economics of \textit{Safecoin} are a subject that is out-with the scope of this paper. In short, its utility on the SAFE Network is not tied to whatever its `exchange price' is. Overtime, the storage `buying power' of each \textit{Safecoin} should increase as computing power and storage becomes cheaper. \textit{Safecoin} is in its infancy and indeed has not yet been implemented. This means it is subject to changes (however this is unlikely) from what has been described above. There are proposals upon how to build the \textit{Safecoin} support structure into the SAFE Network but as it has not been implemented yet I will avoid going discussing it in this paper.
+The economics of \textit{Safecoin} are a subject that is out-with the scope of this paper. In short, its utility on the SAFE Network is not tied to whatever its `exchange price' is. Overtime, the storage `buying power' of each \textit{Safecoin} should increase as computing power and storage becomes cheaper. \textit{Safecoin} is in its infancy and indeed has not yet been implemented. This means it is subject to changes (however this is unlikely) from what has been described above. There are proposals upon how to build the \textit{Safecoin} support structure into the SAFE Network but as it has not been implemented yet it will be avoided in this paper.
+
+The absence of concrete information on how \textit{Safecoin} will function is troublesome. Things like the total cap on coins issued is not clearly defined and how much data will cost isn't either. Another feature that has been discussed is application developers being able to hard code their \textit{Safecoin} wallet address into their website/application. What would then happen is that as their product is used, they would receive a stream of revenue that relates to how popular it is. In \citetitle{lambert2015safecoin}\cite{lambert2015safecoin} it is said that "based on how much the application is used, the network will pay safecoins to the safecoin wallet address of the app creator. This provides a built in revenue stream for app developers, one that is directly proportional to how successful their application is." Although general ideas and outlines are specified in the whitepaper on Safecoin, the specifics of how a lot of this will operate is not specified. This is mainly because it has not been implemented yet. Thus careful attention to how \textit{Safecoin} is implemented is very crucial to the success of the network. Without proper incentives it will be difficult to get people to run \textit{vaults} and use the network. The success of \textit{Safecoin} is thus vital to the success of the SAFE Network.
 
 \section{Quorum and the Datachain}
+\label{sec:datachain}
 
 As the network acts as an autonomous entity there has to be some method for a given \textit{vault} to reach consensus with other \textit{vaults}. This problem is what Cryptocurrencies aim to solve through processes such as mining. \textit{Mining} is essentially the network reaching consensus upon what has happened (in this case, financial transactions). In the case of \textit{Bitcoin}, every time a block is \textit{mined} it is cryptographically linked to the block that came before it. As this \textit{Blockchain} grows in size, the consensus on past transactions grows and grows. For \textit{Bitcoin} and similar \textit{cryptocurrencies}, to be able to undo a transaction/block you would need to have control of over \%50 of the networks \textit{mining} power. The SAFE Network needs a similar mechanism on how to reach consensus. Analogous to a \textit{Blockchain}, the SAFE Network has a \textit{Datachain}. 
 
@@ -130,3 +133,10 @@ A crucial part of the integrity of the \textit{Datachain} is \textit{node ageing
 \textit{Churn} is used to constantly 'rotate' vaults round different \textit{sections} on the network. This means that in a given time frame, a \textit{vault} will not be responsible for the same 256-Bit address range. This important feature helps to ensure that it is very difficult to track down where data is stored in order to erase it or corrupt it. During churn, young \textit{vaults} with a lower \textit{node age} will be chosen more frequently than older \textit{vaults}. The \textit{vaults} chosen are assigned to new \textit{sections} to which it must give another \textit{proof of resource} to be allowed to join. If the new \textit{section} reaches quorum then the \textit{vault} joins and its \textit{node age} is incremented. Thus, trust must be earned by acting as a good party in the network over time. Only when a \textit{vault} reaches a certain \textit{node age} does it become an \textit{elder}. An \textit{elder} is a node which has the highest possible \textit{node age}, meaning it has has proven itself to be a reliable party over the course of time. When a \textit{vault} is an \textit{elder}, it gains the voting rights that eventually lead to the construction and maintenance of the \textit{Datachain}. If a\textit{vault} acts out of order then its \textit{node age} can be decremented or eliminated entirely. Trust must be earned.
 
 \textit{Node ageing} and \textit{churn} are hence essential security features of the network and make it very difficult for an attacker to have any choice in the \textit{section} of the network they wish to attack.
+
+\section{Opportunistic Caching}
+
+ An important feature of \textit{vaults} is that of \textit{caching}. In short, if \textit{vaults} keep passing the same chunk of data onto other \textit{vaults} (as a client somewhere retrieves it) they start to cache the chunks. This means in a loose sense that as more and more people start to access data, say a news website, that access gets faster and faster. Owing to the architecture of the SAFE Network such websites cannot ``go down'' due to high traffic, the network simply responds by allowing more \textit{vaults} to cache and serve the data. This property is important to small websites. If a smaller news site suddenly gets high amounts of traffic, for instance a viral article, they might suffer from outages due to high traffic on a central server in the traditional model of the internet. Hosted on the SAFE Network however, the network will respond (autonomously) to the higher volume of traffic and dynamically increase its potential to serve that content.
+ 
+ Another benefit of this caching is geographical proximity. A good example is that of a website that has support for multiple languages. Due to \textit{vaults} caching data, the chunks that correspond to particular languages will be cached in the \textit{vaults} nearest where they are being served. For instance, the chunks that correspond to Japanese content would more likely to be cached in \textit{vaults} near Japan as that is where they are being fetched from the most.
+ 
