--- a/sections/06-conclusion.tex
+++ b/sections/06-conclusion.tex
@@ -1,1 +1,19 @@
 \chapter{Conclusion}
+
+\section{The Uncertainties of the SAFE Network}
+
+Evaluating the SAFE Network on how it is now does the project an injustice. It is not finished yet and they don't claim it to be. Uncertainties in implementation details, especially \textit{Safecoin}, brings into question how successful the project will be in the long run. Proper incentives for \textit{vault} owners is crucial in the success of the network. The next big step for the project is the implementation of Datachain's (Section \ref{sec:datachain}) and it will be very interesting to see how successful that is. Maidsafe have performed simulations on how \textit{section splits} and \textit{merges} will happen but to see how things handle with a real network will be interesting. There is the real concern of what happens when large parts of the network fail, something that Datachain's hope to address. How effective these mitigation and safety features will be is still to be addressed. Personally I will be very interested to see future work and papers that directly address these issues because they are very complex issues that need to be solved.
+
+The effectiveness of ``Building Applications on the SAFE Network'' is something that can be directly addressed. The infancy of the SAFE Network has made this project difficult. No central source of reliable resources for developers is nightmarish when time is precious such as in building SAFE Wiki. Upon conclusion of this project however SAFE Wiki is a fully functional application that can be used with the current version of the SAFE Network. Assuming that the API won't have any ``breaking'' changes, if and when the SAFE Network fully launches SAFE Wiki will be available for use. People all over the world will be able to access resources like Wikipedia that are hosted on a decentralised and censorship resistant platform.
+
+The SAFE Network ultimately provides an interesting new way to develop applications and services. Developers will have to re-think how they build applications and give proper attention as to how to exploit the characteristics of the SAFE Network to their benefit. Although SAFE Wiki demonstrates that the secure storage and retrieval of data is already possible, more studies and analysis on the feasibility of different applications on the  SAFE Network is needed. Specifically the feasibility of running large websites and services that require extremely fast processing of data needs to be researched fully. The performance of how a world wide SAFE Network with dynamic growth and decay will only be known once it fully launches. It is only then that a true mandate for the use of the SAFE Network can be established. The passion exerted by the team at Maidsafe can only inspire confidence in that they will try their very hardest to achieve all of their goals.
+
+\section{Attribution}
+
+This project would not have been possible without the support of my supervisor Inah Omoronyia. I will be forever grateful for being introduced to the SAFE Network and having my horizons on how applications can built expanded.
+
+I owe gratitude to Maidsafe themselves in that they gave us the opportunity to meet with them at their headquarters in Ayr. The hour we spent together was very illuminating and I truly hope it is not the last interaction that I have with them.
+
+To the forum and community members that answered my queries and questions I owe a great deal of thanks. Most of them are just fellow humans, volunteers who's unwavering passion for the work that Maidsafe is doing really shines through. Without their help and answering of my questions I wouldn't have been able to build SAFE Wiki.
+
+The creators of Kiwix are truly inspiring people. The work that they do in delivering free educational content to the people who most need it is truly inspiring. I hope to be able to contribute something back to their projects in the future. 
